# cv-algo

./: .gitignore  README.md
TestApp/: TestApp.sln
TestApp/TestCamCalib/: TestCamCalib.vcxproj  TestCamCalib.vcxproj.filters  main.cpp
TestApp/TestCamPoseEst/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  TestCamPoseEst.sln  TestCamPoseEst.vcxproj  TestCamPoseEst.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
TestApp/TestDepthMap/: TestDepthMap.cpp  TestDepthMap.vcxproj  TestDepthMap.vcxproj.filters
TestApp/TestQuadFit/: TestQuadFit.vcxproj  TestQuadFit.vcxproj.filters  main.cpp
TestApp/TestUnitQuat/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  TestUnitQuat.sln  TestUnitQuat.vcxproj  TestUnitQuat.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
data/CamCalib/: uv.txt  xyz.txt
data/QuadFit/: gt.json
data/UQ/: xyz.pcd
doc/: Direct Linear Transformation.docx  Quadratic surface fitting.docx
inc/: camcalib.h  dlt.h  pose_est.h  pose_est_Ansar.h  pose_est_Ess.h  pose_est_Lu.h  quad_fit.h  transformation_estimation_uq.h  transformation_estimation_uq.hpp  tsai.h
src/: camcalib.cpp  dlt.cpp  pose_est.cpp  pose_est_Ansar.cpp  pose_est_Ess.cpp  pose_est_Lu.cpp  quad_fit.cpp  tsai.cpp
